--- a/Application/devboost.dronedelivery.felipe.csproj
+++ b/Application/devboost.dronedelivery.felipe.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>D:\Pessoais\devboost.dronedelivery\devboost.dronedelivery.felipe\devboost.dronedelivery.felipe\devboost.dronedelivery.felipe.xml</DocumentationFile>
+    <DocumentationFile>..\devboost.dronedelivery.felipe.xml</DocumentationFile>
     <WarningsAsErrors>NU1605;CS1591</WarningsAsErrors>
   </PropertyGroup>
 
